feat: Added hero image and title

--- a/index.html
+++ b/index.html
@@ -27,8 +27,20 @@
         <button class="btn btn-primary">Contact</button>
       </div>
     </nav>
-  </div>
+    <div class="hero flex items-center">
+      <div class='left'>
+        <img src="./images/man.png" alt="barber image">
+      </div>
+      <div class='right'>
+        <h6>John Wick</h6>
+        <h1>I'm a Razor <span>Cuts</span></h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui ad officia aspernatur sed repellendus
+          dignissimos eum earum mollitia consequatur, quibusdam et veritatis atque nemo inventore nostrum debitis sint
+          aliquid fugiat?</p>
 
+      </div>
+    </div>
+  </div>
 </header>
 
 <body>
