feat: Added styles for layouts

--- a/index.html
+++ b/index.html
@@ -27,17 +27,20 @@
         <button class="btn btn-primary">Contact</button>
       </div>
     </nav>
-    <div class="hero flex items-center">
-      <div class='left'>
+    <div class="hero flex items-center justify-between">
+
+      <div class='left flex-1 flex justify-center'>
         <img src="./images/man.png" alt="barber image">
       </div>
-      <div class='right'>
+
+      <div class='right flex-1'>
         <h6>John Wick</h6>
         <h1>I'm a Razor <span>Cuts</span></h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui ad officia aspernatur sed repellendus
-          dignissimos eum earum mollitia consequatur, quibusdam et veritatis atque nemo inventore nostrum debitis sint
-          aliquid fugiat?</p>
-
+          dignissimos eum earum mollitia consequatur, quibusdam et </p>
+        <div>
+          <button class="btn btn-secondary">Book now</button>
+        </div>
       </div>
     </div>
   </div>
