style: Added image and style for about us page

--- a/index.html
+++ b/index.html
@@ -9,44 +9,66 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 </head>
 
-<header>
-  <div class="container">
-    <nav class="flex items-center justify-between">
-      <div class="left flex items-center">
-        <div class="logo">
-          <img src="./images/Logo.png" class="logo" alt="logo">
-        </div>
-        <div>
-          <a href="#">Home</a>
-          <a href="#">About</a>
-          <a href="#">Services</a>
-          <a href="#">Blog</a>
-        </div>
-      </div>
-      <div class="right">
-        <button class="btn btn-primary">Contact</button>
-      </div>
-    </nav>
-    <div class="hero flex items-center justify-between">
+<body>
 
-      <div class='left flex-1 flex justify-center'>
-        <img src="./images/man.png" alt="barber image">
-      </div>
+  <header>
+    <div class="container">
+      <nav class="flex items-center justify-between">
+        <div class="left flex items-center">
+          <div class="logo">
+            <img src="./images/Logo.png" class="logo" alt="logo">
+          </div>
+          <div>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Services</a>
+            <a href="#">Blog</a>
+          </div>
+        </div>
+        <div class="right">
+          <button class="btn btn-primary">Contact</button>
+        </div>
+      </nav>
+      <div class="hero flex items-center justify-between">
 
-      <div class='right flex-1'>
-        <h6>John Wick</h6>
-        <h1>I'm a Razor <span>Cuts</span></h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui ad officia aspernatur sed repellendus
-          dignissimos eum earum mollitia consequatur, quibusdam et </p>
-        <div>
-          <button class="btn btn-secondary">Book now</button>
+        <div class='left flex-1 flex justify-center'>
+          <img src="./images/man.png" alt="barber image">
+        </div>
+
+        <div class='right flex-1'>
+          <h6>John Wick</h6>
+          <h1>I'm a Razor <span>Cuts</span></h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui ad officia aspernatur sed repellendus
+            dignissimos eum earum mollitia consequatur, quibusdam et </p>
+          <div>
+            <button class="btn btn-secondary">Book now</button>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</header>
+  </header>
 
-<body>
+  <section class="about">
+    <div class="container flex items-center">
+      <div class="flex-1">
+        <img class="about-us-img" src="./images/about-us.jpg" alt="">
+      </div>
+      <div class="flex-1">
+        <h1>About <span>Us</span></h1>
+        <h3>Hello I'm John Wick</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet voluptas, modi voluptates dolorum nesciunt
+          quidem eos doloribus eius, labore, aliquam ut distinctio. Dicta repellendus magni natus fuga temporibus
+          commodi error?</p>
+        <div>
+          <a href="#"><img src="" alt=""></a>
+          <a href="#"><img src="" alt=""></a>
+          <a href="#"><img src="" alt=""></a>
+          <a href="#"><img src="" alt=""></a>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
 </body>
 
