--- a/index.html
+++ b/index.html
@@ -70,6 +70,56 @@
   </section>
 
 
+
+  <section class="services">
+    <div class="container">
+      <h1 class="section-heading"><span>Our</span> Services</h1>
+      <p>Our friendly team provides high quality hair cuts</p>
+      <div class="card-wrapper">
+
+        <div class="card">
+          <img src="" alt="">
+          <h2>Beard Treatment</h2>
+          <p>Haircut, shampoo & hot towel finish</p>
+        </div>
+
+
+        <div class="card">
+          <img src="" alt="">
+          <h2>Beard Treatment</h2>
+          <p>Haircut, shampoo & hot towel finish</p>
+        </div>
+
+
+        <div class="card">
+          <img src="" alt="">
+          <h2>Beard Treatment</h2>
+          <p>Haircut, shampoo & hot towel finish</p>
+        </div>
+
+
+        <div class="card">
+          <img src="" alt="">
+          <h2>Beard Treatment</h2>
+          <p>Haircut, shampoo & hot towel finish</p>
+        </div>
+
+        <div class="card">
+          <img src="" alt="">
+          <h2>Beard Treatment</h2>
+          <p>Haircut, shampoo & hot towel finish</p>
+        </div>
+
+        <div class="card">
+          <img src="" alt="">
+          <h2>Beard Treatment</h2>
+          <p>Haircut, shampoo & hot towel finish</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
 </body>
 
 </html>
