feat: Created a slider using slick library

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Barber Shop</title>
+  <!-- slick css -->
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
   <link rel="stylesheet" href="./css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 </head>
@@ -119,6 +121,57 @@
     </div>
   </section>
 
+  <section class="reviews">
+    <div class="container">
+      <h1 class="section-heading"><span>Our</span> Client</h1>
+      <p>We provide high standards hair cuts for men and women</p>
+      <div class="slider">
+        <div class="slide">
+          <img src="./images/client.jpg" alt="">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sint provident ducimus alias quas? Illum
+            quo reprehenderit quisquam earum iure. Blanditiis optio magni expedita cumque commodi, adipisci totam sunt
+            a.</p>
+          <span>Jack Wood</span>
+        </div>
+
+
+        <div class="slide">
+          <img src="./images/client.jpg" alt="">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sint provident ducimus alias quas? Illum
+            quo reprehenderit quisquam earum iure. Blanditiis optio magni expedita cumque commodi, adipisci totam sunt
+            a.</p>
+          <span>Jack Wood</span>
+        </div>
+
+
+        <div class="slide">
+          <img src="./images/client.jpg" alt="">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sint provident ducimus alias quas? Illum
+            quo reprehenderit quisquam earum iure. Blanditiis optio magni expedita cumque commodi, adipisci totam sunt
+            a.</p>
+          <span>Jack Wood</span>
+        </div>
+
+
+        <div class="slide">
+          <img src="./images/client.jpg" alt="">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sint provident ducimus alias quas? Illum
+            quo reprehenderit quisquam earum iure. Blanditiis optio magni expedita cumque commodi, adipisci totam sunt
+            a.</p>
+          <span>Jack Wood</span>
+        </div>
+
+      </div>
+      <div class="slider-dots"></div>
+    </div>
+  </section>
+
+
+  <!-- slick  -->
+  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script src="./js/app.js"></script>
 
 </body>
 
