feat: displaying grid style images for our work

--- a/index.html
+++ b/index.html
@@ -167,6 +167,43 @@
   </section>
 
 
+
+  <section class="work">
+    <div class="container">
+      <h1 class="section-heading"><span>Our</span> Works</h1>
+      <p>Professional, family owned and operated barbers offering a traditional barber shop experience</p>
+
+
+      <div class="card-wrapper">
+        <div class="card">
+          <img src="./images/one.jpg" alt="clients">
+        </div>
+
+        <div class="card">
+          <img src="./images/two.jpg" alt="clients">
+        </div>
+
+        <div class="card">
+          <img src="./images/three.jpg" alt="clients">
+        </div>
+
+        <div class="card">
+          <img src="./images/four.jpg" alt="clients">
+        </div>
+
+        <div class="card">
+          <img src="./images/five.jpg" alt="clients">
+        </div>
+
+        <div class="card">
+          <img src="./images/six.jpg" alt="clients">
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+
   <!-- slick  -->
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
