feat: Created a blog with text

--- a/index.html
+++ b/index.html
@@ -204,6 +204,65 @@
   </section>
 
 
+  <section class="blog">
+    <div class="container">
+      <h1 class="section-heading"><span>Our</span> Blogs</h1>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab odit quo. </p>
+    </div>
+    <div class="card-wrapper">
+      <div class="card">
+        <div class="img-wrapper">
+          <img src="./images/blog-one.jpg" alt="">
+        </div>
+        <div class="card-content">
+          <a href="#">
+            <h1>Street cuts</h1>
+          </a>
+          <span>May 21 2018</span>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi vitae aliquid repellat totam ex molestias
+            odit nihil adipisci! Praesentium, ratione! Quis praesentium illo dolor est ratione itaque aliquam quidem
+            ullam?</p>
+          <a href="#">Read More</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="img-wrapper">
+          <img src="./images/blog-three.jpg" alt="">
+        </div>
+        <div class="card-content">
+          <a href="#">
+            <h1>Beard Styles</h1>
+          </a>
+          <span>Sep 19 2019</span>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi vitae aliquid repellat totam ex molestias
+            odit nihil adipisci! Praesentium, ratione! Quis praesentium illo dolor est ratione itaque aliquam quidem
+            ullam?</p>
+          <a href="#">Read More</a>
+        </div>
+      </div>
+
+
+      <div class="card">
+        <div class="img-wrapper">
+          <img src="./images/blog-two.jpg" alt="">
+        </div>
+        <div class="card-content">
+          <a href="#">
+            <h1>London Opening Soon</h1>
+          </a>
+          <span>Aug 14 2020</span>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi vitae aliquid repellat totam ex molestias
+            odit nihil adipisci! Praesentium, ratione! Quis praesentium illo dolor est ratione itaque aliquam quidem
+            ullam?</p>
+          <a href="#">Read More</a>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+
   <!-- slick  -->
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
