feat: Created contact details and contact form with html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Barber Shop</title>
+  <!-- font awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- slick css -->
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
   <link rel="stylesheet" href="./css/style.css">
@@ -50,6 +52,8 @@
     </div>
   </header>
 
+  <!-- about  -->
+
   <section class="about">
     <div class="container flex items-center">
       <div class="flex-1">
@@ -71,7 +75,7 @@
     </div>
   </section>
 
-
+  <!-- services  -->
 
   <section class="services">
     <div class="container">
@@ -121,6 +125,8 @@
     </div>
   </section>
 
+  <!-- slider reviews -->
+
   <section class="reviews">
     <div class="container">
       <h1 class="section-heading"><span>Our</span> Client</h1>
@@ -166,7 +172,7 @@
     </div>
   </section>
 
-
+  <!-- our work -->
 
   <section class="work">
     <div class="container">
@@ -203,6 +209,7 @@
     </div>
   </section>
 
+  <!-- blog -->
 
   <section class="blog">
     <div class="container">
@@ -259,6 +266,49 @@
         </div>
       </div>
 
+    </div>
+  </section>
+
+
+
+  <!-- contact -->
+
+  <section class="contact">
+    <div class="container">
+      <h1 class="section-heading"><span> Contact</span> Us</h1>
+      <p>Book your appointment, send us a email or walk in to our barber shop</p>
+      <div class="card-wrapper">
+        <div class="card">
+          <i class="fa fa-phone" aria-hidden="true"></i>
+          <h3>Call Us On</h3>
+          <h6>02042 434563</h6>
+        </div>
+
+        <div class="card">
+          <i class="fa fa-envelope" aria-hidden="true"></i>
+          <h3>Email Us At</h3>
+          <h6>book@barbershouse.com</h6>
+        </div>
+
+        <div class="card">
+          <i class="fa fa-map-marker" aria-hidden="true"></i>
+          <h3>Visit Us At</h3>
+          <h6>363 Shoreditch, London, <br>EC1A 7LA</h6>
+        </div>
+      </div>
+      <form action="">
+        <div class="input-wrap">
+          <input type="text" placeholder="Your Name">
+          <input type="text" placeholder="Your Email">
+        </div>
+        <div class="input-wrap-2">
+          <input type="text" placeholder="Your subject">
+          <textarea name="" id="" cols="30" rows="10" placeholdder="Your Message"></textarea>
+        </div>
+        <div>
+          <button class="btn btn-primary">Send</button>
+        </div>
+      </form>
     </div>
   </section>
 
