Created contact form

--- a/index.html
+++ b/index.html
@@ -296,16 +296,17 @@
           <h6>363 Shoreditch, London, <br>EC1A 7LA</h6>
         </div>
       </div>
+
       <form action="">
         <div class="input-wrap">
-          <input type="text" placeholder="Your Name">
-          <input type="text" placeholder="Your Email">
+          <input type="text" placeholder="Name">
+          <input type="text" placeholder="Email">
         </div>
         <div class="input-wrap-2">
-          <input type="text" placeholder="Your subject">
-          <textarea name="" id="" cols="30" rows="10" placeholdder="Your Message"></textarea>
+          <input type="text" placeholder="Subject">
+          <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
         </div>
-        <div>
+        <div class="btn-wrapper">
           <button class="btn btn-primary">Send</button>
         </div>
       </form>
