feat: Created a footer with social icon

--- a/index.html
+++ b/index.html
@@ -313,6 +313,18 @@
     </div>
   </section>
 
+  <footer>
+    <div class="footer-socials">
+      <a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+      <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+      <a href="#"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a>
+    </div>
+    <div class="copyright">
+      <p>Copyright 2020 &#169 Shafique</p>
+    </div>
+
+  </footer>
+
 
   <!-- slick  -->
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
