--- a/index.html
+++ b/index.html
@@ -20,13 +20,21 @@
       <nav class="flex items-center justify-between">
         <div class="left flex items-center">
           <div class="logo">
-            <img src="./images/Logo.png" class="logo" alt="logo">
+
+            <svg>
+              <text x="30" y="88" class="svg-text">Barbers House</text>
+            </svg>
+
+
+
+
+
           </div>
-          <div>
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Services</a>
-            <a href="#">Blog</a>
+          <div id="home">
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#services">Services</a>
+            <a href="#blog">Blog</a>
           </div>
         </div>
         <div class="right">
@@ -54,7 +62,7 @@
 
   <!-- about  -->
 
-  <section class="about">
+  <section id="about" class="about">
     <div class="container flex items-center">
       <div class="flex-1">
         <img class="about-us-img" src="./images/about-us.jpg" alt="">
@@ -77,7 +85,7 @@
 
   <!-- services  -->
 
-  <section class="services">
+  <section class="services" id="services">
     <div class="container">
       <h1 class="section-heading"><span>Our</span> Services</h1>
       <p>Our friendly team provides high quality hair cuts</p>
@@ -211,7 +219,7 @@
 
   <!-- blog -->
 
-  <section class="blog">
+  <section class="blog" id="blog">
     <div class="container">
       <h1 class="section-heading"><span>Our</span> Blogs</h1>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab odit quo. </p>
