--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
             quidem eos doloribus eius, labore, aliquam ut distinctio. Dicta repellendus magni natus fuga temporibus
             commodi error?</p>
           <div>
+            <!-- <a href="#"><img src="" alt=""></a>
             <a href="#"><img src="" alt=""></a>
             <a href="#"><img src="" alt=""></a>
-            <a href="#"><img src="" alt=""></a>
-            <a href="#"><img src="" alt=""></a>
+            <a href="#"><img src="" alt=""></a> -->
           </div>
         </div>
       </div>
