Added view height

--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
             nesciunt
             quidem eos doloribus eius, labore, aliquam ut distinctio. Dicta repellendus magni natus fuga temporibus
             commodi error?</p>
-          <div>
-            <!-- <a href="#"><img src="" alt=""></a>
+          <!-- <div>
             <a href="#"><img src="" alt=""></a>
             <a href="#"><img src="" alt=""></a>
-            <a href="#"><img src="" alt=""></a> -->
-          </div>
+            <a href="#"><img src="" alt=""></a>
+            <a href="#"><img src="" alt=""></a>
+          </div> -->
         </div>
       </div>
     </section>
